--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body class="container-fluid">
+    <img src="./public/images/banner.png" alt="">
     <h2 class="bg-danger text-white p-2 text-center">HOME</h2>
     <a href="public/login.html">Login</a>
     <span> | </span>
