--- a/public/contact.html
+++ b/public/contact.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <script src="../../node_modules/jquery/dist/jquery.js"></script>
-    <script src="../../node_modules/jquery.cookie/jquery.cookie.js"></script>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
+    <script src="../node_modules/jquery.cookie/jquery.cookie.js"></script>
     <script>
         $(function(){
             if($.cookie("username")==undefined){
