--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container-fluid">
     <img src="./public/images/banner.png" alt="">
-    <h2 class="bg-danger text-white p-2 text-center">HOME</h2>
+    <h2 class="bg-danger text-white p-2 text-center w-100">HOME</h2>
     <a href="public/login.html">Login</a>
     <span> | </span>
     <a href="public/tutorial.html">Tutorials</a>
